[feature] Add mouse and trackpad gestures to desktop image previews